# mate

./: .gitignore  .gitmodules  Cargo.toml  README.md  default_number_fallback  iter  no_debug_struct  rust-toolchain
.github/workflows/: bench-test-gitee.yaml  bench-test-github.yaml  bench-test.yaml  verify.yaml
benchmark/: no_debug_struct.rs
benchmark/parallel/: basic.rs  iter.rs
benchmark/rules/: default_number_fallback.rs  no_debug_struct.rs
clippy_utils/src/: ast_utils.rs
lints/deprecated_rayon/: Cargo.toml
lints/deprecated_rayon/src/: lib.rs
lints/deprecated_rayon/ui/: main.fixed  main.rs  main.stderr
lints/filter/: Cargo.toml
lints/filter/src/: lib.rs  simple.rs  simple_flipped.rs
lints/filter/ui/: main.fixed  main.rs  main.stderr
lints/fold/: Cargo.toml
lints/fold/src/: hashmap.rs  lib.rs  simple.rs  vec.rs
lints/fold/ui/: main.fixed  main.rs  main.stderr
lints/for_each/: Cargo.toml
lints/for_each/src/: lib.rs  variable_check.rs
lints/for_each/ui/: main.fixed  main.rs  main.stderr
lints/map/: Cargo.toml
lints/map/src/: builder.rs  lib.rs
lints/map/ui/: main.fixed  main.rs  main.stderr
lints/par_fold/: Cargo.toml
lints/par_fold/src/: hashmap.rs  lib.rs  par_fold_simple.rs  rayon_import.rs  vec.rs
lints/par_fold/ui/: build.rs  par_fold_simple.fixed  par_fold_simple.rs  par_fold_simple.stderr  rayon_missing.stderr
lints/par_iter/: Cargo.toml
lints/par_iter/src/: constants.rs  lib.rs  utils.rs  variable_check.rs
lints/par_iter/ui/: main.fixed  main.rs  main.stderr  main2.fixed  main2.rs  qos.fixed
lints/rayon_import/: Cargo.toml  README.md
lints/rayon_import/src/: lib.rs
lints/rayon_import/ui/: rayon_missing.stderr
lints/rayon_imports/: Cargo.toml
lints/rayon_imports/src/: lib.rs  rayon_prelude.rs
lints/rayon_imports/ui/: main.rs  rayon_missing.fixed  rayon_missing.rs  rayon_missing.stderr  rayon_present.fixed
lints/to_iter/: Cargo.toml
lints/to_iter/src/: lib.rs  variable_check.rs
lints/to_iter/ui/: main.fixed  main.rs  main.stderr
rayon_import/ui/: rayon_missing.fixed  rayon_present.fixed
scripts/: counters.sh  fix_cargo_toml.sh  prepare_repo.sh
src/: cargo_cli.rs  lib.rs  main.rs
src/lints/: mod.rs  rayon.rs  test_lint.rs
src/lints/parallel/: iter.rs  mod.rs
src/lints/parallel/phase1/: mod.rs
src/lints/parallel/phase2/: simple.rs
src/lints/parallel/phase3/fold/: simple.rs
src/lints/parallel/phase4/: mod.rs
src/lints/parallel/phase4/fold/: simple.rs
src/lints/phase1/: mod.rs
src/lints/phase2/: mod.rs  simple.rs  simple_flipped.rs
src/lints/phase3/: mod.rs
src/lints/phase3/fold/: simple.rs
src/lints/phase4/fold/: simple.rs
src/lints/rules/: default_numeric_fallback.rs  missing_debug_implementations.rs  mod.rs
src/lints/safety/: mod.rs  permission.rs  translation.rs
test/: Cargo.toml
test/src/: lib.rs
ui/: for_each.fixed  for_each.rs  for_each.stderr  rayon.fixed  rayon.rs  rayon.stderr  rayon_missing.fixed  rayon_missing.rs  rayon_missing.stderr  rayon_present.rs  warn_filter_simple.fixed  warn_filter_simple_flipped.rs  warn_fold_simple.rs  warn_fold_simple.stderr  warn_par_fold_simple.fixed  warn_par_fold_simple.rs  warn_par_fold_simple.stderr
ui/for_each/: for_each.fixed  for_each.stderr
utils/: Cargo.toml
utils/src/: constants.rs  lib.rs  variable_check.rs
