[package]
name = "mate"
version = "0.1.0"
authors = ["Cameron Low <email>", "Luca Carlig <luca.carlig@huawei.com"]
description = "library of lints for automatic parallelization"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
for_each = { path = "lints/for_each", features = ["rlib"] }
filter = { path = "lints/filter", features = ["rlib"] }
fold = { path = "lints/fold", features = ["rlib"] }
par_fold = { path = "lints/par_fold", features = ["rlib"] }
par_iter = { path = "lints/par_iter", features = ["rlib"] }

dylint_linting = { version = "2.6.1" }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = [
    "lints/for_each",
    "lints/filter",
    "lints/fold",
    "lints/par_fold",
    "lints/par_iter",
    "utils",
]

[dev-dependencies]
dylint_testing = "2.6.1"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ac4c2094a6030530661bee3876e0228ddfeb6b8b" }
utils = { path = "utils" }

[workspace.metadata.dylint]
clibraries = [{ path = "../mate" }]
