[package]
name = "map"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clippy_utils = { workspace = true }
utils = { workspace = true }

dylint_linting = "2.6.1"

[dev-dependencies]
dylint_testing = "3.0.0"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[[example]]
name = "fold_main"
path = "ui/main.rs"

[lints.clippy]
# GROUPS
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "forbid", priority = -3 }
complexity = { level = "forbid", priority = -4 }


# INDIVIDUAL LINTS
semicolon_if_nothing_returned = { level = "allow", priority = 0 }
similar_names = { level = "allow", priority = 0 }
alloc_instead_of_core = { level = "warn", priority = 0 }
as_conversions = { level = "warn", priority = 0 }
as_underscore = { level = "warn", priority = 0 }
dbg_macro = { level = "warn", priority = 0 }
default_numeric_fallback = { level = "warn", priority = 0 }
deref_by_slicing = { level = "warn", priority = 0 }
empty_enum_variants_with_brackets = { level = "warn", priority = 0 }
empty_structs_with_brackets = { level = "warn", priority = 0 }
expect_used = { level = "warn", priority = 0 }
format_push_string = { level = "warn", priority = 0 }
if_then_some_else_none = { level = "warn", priority = 0 }
unwrap_used = { level = "warn", priority = 0 }
