[package]
name = "par_fold"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = "2.6.1"

clippy_utils = { workspace = true }
utils = { workspace = true }
[dev-dependencies]
dylint_testing = "2.6.1"
rayon = "1.8.0"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[[example]]
name = "rayon_present"
path = "ui/rayon_present.rs"

[[example]]
name = "rayon_missing"
path = "ui/rayon_missing.rs"

[[example]]
name = "par_fold_simple"
path = "ui/par_fold_simple.rs"
