[package]
name = "par_iter"
version = "0.1.1"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = "3.0.0"

clippy_utils = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
dylint_testing = "3.0.0"
rayon = "1.9.0"
futures = "*"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[[example]]
name = "par_iter_main"
path = "ui/main.rs"

[[example]]
name = "par_iter_main2"
path = "ui/main2.rs"

[lints]
workspace = true
