[package]
name = "rayon_import"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clippy_utils = { workspace = true }
dylint_linting = "2.5.0"

[dev-dependencies]
dylint_testing = "2.5.0"
rayon = "1.8"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[[example]]
name = "rayon_present"
path = "ui/rayon_present.rs"

[[example]]
name = "rayon_missing"
path = "ui/rayon_missing.rs"
